<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="bt_update_location">Update</string>
    <string name="bt_move_down">Down</string>
    <string name="bt_move_up">Up</string>
    <string name="bt_save_location">Save Location</string>
    <string name="bt_move_right">Right</string>
    <string name="bt_moveLeft">Left</string>
    <string name="bt_disconnect_with_telescope">Disconnect</string>
    <string name="bt_connect_with_telescope">Connect</string>
    <string name="bt_save_star_position">Save</string>
    <string name="bt_select_star">Select</string>
    <string name="bt_reset_position">Reset</string>
    <string name="bt_sync_position">Sync</string>
    <string name="bt_track_on">Track On</string>
    <string name="bt_track_off">Track Off</string>
    <string name="bt_manual">Manual</string>
    <string name="bt_save_coordinates">Save</string>
    <string name="bt_save_coordinates_cancel">Cancel</string>
    <string name="bt_calibrate">Calibrate</string>
    <string name="bt_close">OK</string>
    <string name="bt_locate">Locate</string>
    <string name="bt_goto">Go-To</string>    
    <string name="lbl_star_alignment">Star Alignment Proc.</string>
    <string name="lbl_latitude">Lat:</string>
    <string name="lbl_longitude">Lon:</string>
    <string name="lbl_star_name">Name:</string>
    <string name="lbl_ra">R.A.:</string>
    <string name="lbl_ra_h">h</string>
    <string name="lbl_ra_m">m</string>
    <string name="lbl_dec">Dec.:</string>
    <string name="lbl_select_second_star">Locate Second Star</string>
    <string name="lbl_select_first_star">Locate First Star</string>
    <string name="lbl_telescope_position">Scope position</string>
    <string name="lbl_target_position">Target</string>
    <string name="lbl_altitude">Alt:</string>
    <string name="lbl_azimuth">Az:</string>
    <string name="lbl_default_degree_latitude">35</string>
    <string name="lbl_default_min_latitude">19</string>
    <string name="lbl_default_sec_latitude">58</string>
    <string name="lbl_default_degree_longitude">25</string>
    <string name="lbl_default_min_longitude">07</string>
    <string name="lbl_default_sec_longitude">59</string>
    <string name="lbl_degree_symbol">\u00B0</string>
    <string name="lbl_min_symbol">\'</string>
    <string name="lbl_sec_symbol">\"</string>
    <string name="lbl_connected">Not-Connected</string>
    <string name="lbl_tracking_status">Status:</string>
    <string name="lbl_connect_with_telescope">Connect With Telescope</string>
    <string name="lbl_title">Hipparchus:</string>
    <string name="lbl_settingsSubTitle">Settings</string>
    <string name="lbl_trackingSubTitle">Object Tracking</string>
    <string name="lbl_manual_movement_title">Move To The Target</string>
    <string name="lbl_enter_target_coords">Enter Eq. Coordinates</string>
    <string name="hdr_location">Update Location</string>
    <string name="hrd_telescope_control">Telescope Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_visible_stars">VisibleStarsActivity</string>

</resources>