<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.3"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_shape"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_move_up"
            style="@style/darkRedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_move_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_move_left"
                style="@style/darkRedButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/bt_moveLeft" />

            <Button
                android:id="@+id/bt_reset_position"
                style="@style/darkRedButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/bt_reset_position" />

            <Button
                android:id="@+id/bt_move_right"
                style="@style/darkRedButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/bt_move_right" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_move_down"
            style="@style/darkRedButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_move_down" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rectangle_shape" >

        <Button
            android:id="@+id/button1"
            style="@style/darkRedButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/bt_close" />

    </LinearLayout>

</LinearLayout>