<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rectangle_shape"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/darkRedTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/lbl_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/darkRedSubTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lbl_star_alignment"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/secondStarLabel"
            style="@style/darkRedHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_select_second_star"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/star2NameLabel"
                    style="@style/darkRedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_star_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/star2RaLabel"
                    style="@style/darkRedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_ra"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/star2DecLabel"
                    style="@style/darkRedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_dec"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/star2NameText"
                    style="@style/darkRedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/star2RaText"
                    style="@style/darkRedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/star2DecText"
                    style="@style/darkRedTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/star2SelectBtn"
        style="@style/darkRedButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp" android:background="@drawable/button_style" android:text="@string/bt_select_star"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/locate2ndStar"
            style="@style/darkRedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" android:background="@drawable/button_style" android:text="@string/bt_locate"/>

        <Button
            android:id="@+id/star2SetBtn"
            style="@style/darkRedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" android:background="@drawable/button_style" android:text="@string/bt_save_star_position"/>

    </LinearLayout>

    <Button
        android:id="@+id/calibrateBtn"
        style="@style/darkRedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp" android:background="@drawable/button_style" android:text="@string/bt_calibrate"/>

</LinearLayout>